# graph-labs

./: LICENSE  README.md  pyproject.toml
labs/lab1-Centrality/: NetScience.edgelist  degree_centrality.json  helper.py  lab1_jupyter.ipynb  nohup.out
labs/lab2-Community-detection/: helper.py  lab2_jupyter.ipynb
labs/lab2-Community-detection/.ipynb_checkpoints/: lab2_jupyter-checkpoint.ipynb
labs/lab3-GNNs/: Lab-GNN.ipynb
labs/lab3-GNNs/__MACOSX/: ._Lab3-GNN
labs/lab3-GNNs/__MACOSX/Lab3-GNN/: ._requirements.txt
